# seishin2d

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
bindings/go/: README.md
crates/seishin/: Cargo.toml
crates/seishin/src/: app.rs  lib.rs  platform.rs
crates/seishin2d/: Cargo.toml
crates/seishin2d/src/: app.rs  lib.rs  platform.rs
crates/seishin2d_assets/: Cargo.toml
crates/seishin2d_assets/src/: error.rs  lib.rs  loader.rs  path.rs
crates/seishin2d_audio/: Cargo.toml
crates/seishin2d_audio/src/: backend.rs  error.rs  lib.rs  platform.rs  system.rs  types.rs
crates/seishin2d_core/: Cargo.toml
crates/seishin2d_core/src/: engine.rs  lib.rs  types.rs
crates/seishin2d_ffi/: Cargo.toml
crates/seishin2d_ffi/src/: ffi.rs  lib.rs  types.rs
crates/seishin2d_input/: Cargo.toml
crates/seishin2d_input/src/: key.rs  lib.rs  state.rs
crates/seishin2d_physics/: Cargo.toml
crates/seishin2d_render/: Cargo.toml
crates/seishin2d_render/src/: lib.rs  renderer.rs  types.rs
crates/seishin2d_runtime/: Cargo.toml
crates/seishin2d_runtime/src/: desktop.rs  error.rs  headless.rs  lib.rs  web.rs
crates/seishin_assets/: Cargo.toml
crates/seishin_assets/src/: handle.rs  image.rs  lib.rs  loader.rs  path.rs  platform.rs
crates/seishin_audio/: Cargo.toml
crates/seishin_audio/src/: error.rs  lib.rs  platform.rs  system.rs  types.rs
crates/seishin_core/: Cargo.toml
crates/seishin_core/src/: engine.rs  error.rs
crates/seishin_ffi/: Cargo.toml
crates/seishin_ffi/src/: ffi.rs  types.rs
crates/seishin_input/: Cargo.toml
crates/seishin_input/src/: key.rs
crates/seishin_physics/: Cargo.toml
crates/seishin_physics/src/: collider.rs  lib.rs
crates/seishin_render/: Cargo.toml
crates/seishin_render/src/: error.rs  renderer.rs  types.rs
crates/seishin_runtime/: Cargo.toml
crates/seishin_runtime/src/: desktop.rs  error.rs  headless.rs  lib.rs  time.rs  web.rs
docs/: architecture.md  roadmap.md
docs/adr/: 0001-desktop-first-mvp-scope.md  0002-reversa-reference-not-parity.md  0003-thin-opaque-ffi-boundary.md  0004-private-backend-dependencies.md  0005-validation-evidence-for-mvp.md  0006-layered-gameplay-dx-api.md  0007-scene-prefab-component-architecture.md
examples/basic_2d/: .gitignore  Cargo.toml  Seishin.toml
examples/basic_2d/resources/data/characters/: blacksmith.toml  merchant.toml
examples/basic_2d/resources/data/components/: player_controller.toml
examples/basic_2d/resources/data/dialogues/: blacksmith_intro.dialogue.toml  merchant_intro.dialogue.toml
examples/basic_2d/resources/prefabs/: npc.prefab.toml  player.prefab.toml
examples/basic_2d/resources/scenes/: main.scene.toml
examples/basic_2d/src/: main.rs
examples/basic_2d/src/components/: mod.rs  player_controller.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
