[workspace]
members = [
    "crates/seishin2d",
    "crates/seishin2d_core",
    "crates/seishin2d_runtime",
    "crates/seishin2d_render",
    "crates/seishin2d_input",
    "crates/seishin2d_assets",
    "crates/seishin2d_audio",
    "crates/seishin2d_physics",
    "crates/seishin2d_ffi",
    "examples/minimal",
    "examples/basic_2d",
    "tools/xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/seishin2d"
rust-version = "1.75"

[workspace.dependencies]
seishin2d = { path = "crates/seishin2d" }
seishin2d_core = { path = "crates/seishin2d_core" }
seishin2d_runtime = { path = "crates/seishin2d_runtime" }
seishin2d_render = { path = "crates/seishin2d_render" }
seishin2d_input = { path = "crates/seishin2d_input" }
seishin2d_assets = { path = "crates/seishin2d_assets" }
seishin2d_audio = { path = "crates/seishin2d_audio" }
seishin2d_physics = { path = "crates/seishin2d_physics" }
bytemuck = { version = "1.15.0", features = ["derive"] }
kira = { version = "0.12.0", default-features = false, features = ["cpal", "wav"] }
pollster = "0.4.0"
raw-window-handle = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.23"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = "29.0.3"
winit = "0.29.15"
