[package]
name = "seishin2d"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
seishin2d_assets.workspace = true
seishin2d_audio.workspace = true
seishin2d_core.workspace = true
seishin2d_input.workspace = true
seishin2d_physics.workspace = true
seishin2d_render.workspace = true
seishin2d_runtime.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["XmlHttpRequest"] }
