[package]
name = "seishin2d_assets"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
image = { version = "0.24.9", default-features = false, features = ["png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
web-sys = { workspace = true, features = ["XmlHttpRequest", "XmlHttpRequestResponseType"] }
