[package]
name = "seishin2d_runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
seishin2d_core.workspace = true
seishin2d_input.workspace = true
seishin2d_render.workspace = true
pollster.workspace = true
winit.workspace = true
