[package]
name = "seishin2d_basic_2d"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
seishin2d.workspace = true
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["console", "Document", "Element", "Window"] }
